Fix Profile not showing information, Update edit profile & Add counter for the favorite list

--- a/src/components/layout/User/styles/Header.scss
+++ b/src/components/layout/User/styles/Header.scss
@@ -1,5 +1,5 @@
-@use '../../../../styles/root' as *;
-@use 'sass:color';
+@use "../../../../styles/root" as *;
+@use "sass:color";
 
 .main-header {
   @include primary-gradient;
@@ -63,6 +63,29 @@
 
     .icon {
       font-size: 1.2rem;
+    }
+  }
+
+  .favorites-link {
+    position: relative;
+
+    .favorites-count {
+      position: absolute;
+      top: -8px;
+      right: -10px;
+      background-color: #e50914;
+      color: white;
+      border-radius: 50%;
+      width: 22px;
+      height: 22px;
+      min-width: 22px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 12px;
+      font-weight: bold;
+      padding: 0;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
     }
   }
 
